initial cpsycoun add

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = rag_dataset
+    remote = cpsycoun_dataset
 ['remote "rag_dataset"']
+    url = gs://couch-gpt-store/dvc_store
+['remote "cpsycoun_dataset"']
     url = gs://couch-gpt-store/dvc_store
